Fixed shade issue with mimic's height and padding. Added CSS override for the drag handle's z-index.

--- a/public/uts/coupledtanksnew/coupledtanksnew.css
+++ b/public/uts/coupledtanksnew/coupledtanksnew.css
@@ -116,9 +116,12 @@
 }
 
 .window-header-shade {
-    height: 25px;
+    height: 25px !important;
 }
 
+.ui-resizable-se {
+	z-index: -1 !important;
+}
 /******************************************************************************
  ** Tab Windows                                                              **
  ******************************************************************************/
